fix NPE problems and broken API links